environment, concept-art and ui-ux page created

--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -416,13 +416,13 @@
 	<!-- End Header -->
 
     <!-- Start Breadcrumb Area -->
-    <section class="breadcrumb-areav2 environment-design-banner d-flex align-items-center">
+    <section class="breadcrumb-areav2 ui-ux-banner d-flex align-items-center">
 		<div class="container">
 			<div class="row">
                 <div class="col-12 v-center">
                     <div class="hero-heading-sec2 niwax" style="transform: translate3d(0px, 20px, 0px);">
-                        <h3 class="wow fadeIn text-white" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Environment Design Service</h3>
-                        <p class="wow fadeIn m0 pt-3" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">We fit your ideas into unforgettable environments and landscapes</p>
+                        <h3 class="wow fadeIn text-white" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">UI/UX Design Service</h3>
+                        <p class="wow fadeIn m0 pt-3" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">We design user-friendly interfaces for apps and games</p>
                         <a href="contact-us.html" class="niwax-btn2 wow fadeIn mt-4" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">Contact Us <i class="fas fa-chevron-right fa-ani" aria-hidden="true"></i></a>
                         <a href="#portfolio" class="niwax-btn2 wow fadeIn mt-4 ms-3" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">Portfolio <i class="fas fa-chevron-right fa-ani" aria-hidden="true"></i></a>
                     </div>
@@ -438,8 +438,8 @@
 			<div class="row">
 				<div class="col-lg-12 wow fadeInDown">
 					<div class="common-heading text-l">
-						<h2 class="common-heading">Environment Design Service We Provide</h2>
-						<p class="text-center">We have a great passion for creating vibrant and unique digital worlds. Our environment art agency expertly manages this branch of design for games, animation, and various other media forms. Our artworks will become a perfect fit for any story you are trying to tell and leave a lasting impression.</p>
+						<h2 class="common-heading">UI/UX Design Service We Provide</h2>
+						<p class="text-center">3D-Ace helps you get ahead with interfaces that are not only user-friendly and functional but also goal-oriented. We confidently work with businesses from various industries and design for multiple platforms.</p>
 					</div>
 				</div>
             </div>
@@ -447,63 +447,63 @@
 				<div class="col-md-5 wow fadeInLeft">
 					<ul class="nav nav-tabs mt-3">
 						<li class="me-2 nav-item">
-							<a data-bs-toggle="tab" href="#game" class="service-box-inner zoomed active nav-link">
+							<a data-bs-toggle="tab" href="#wireframing" class="service-box-inner zoomed active nav-link">
                                 <div class="service-box-icon">
-                                    <img src="images/services/environment-design/game-environment.svg" alt="Game Environment">
+                                    <img src="images/services/ui-ux-design/wireframing-prototyping.svg" alt="Wireframing and Prototyping">
                                 </div>
-                                <p class="services-box-title">Game Environment</p>
+                                <p class="services-box-title">Wireframing and Prototyping</p>
 							</a>
 						</li>
 						<li class="nav-item">
-							<a data-bs-toggle="tab" href="#maps" class="service-box-inner zoomed nav-link">
+							<a data-bs-toggle="tab" href="#mobile" class="service-box-inner zoomed nav-link">
                                 <div class="service-box-icon">
-                                    <img src="images/services/environment-design/maps-levels-environment.svg" alt="Maps & Level Environment">
+                                    <img src="images/services/ui-ux-design/mobile-app.svg" alt="Mobile App UI/UX Design">
                                 </div>
-                                <p class="services-box-title">Maps & Levels</p>
+                                <p class="services-box-title">Mobile App UI/UX Design</p>
 							</a>
 						</li>
 						<li class="mt-3 me-2 nav-item">
-							<a data-bs-toggle="tab" href="#biomes" class="service-box-inner zoomed nav-link">
+							<a data-bs-toggle="tab" href="#web" class="service-box-inner zoomed nav-link">
                                 <div class="service-box-icon">
-                                    <img src="images/services/environment-design/biomes-environment.svg" alt="Biomes Environment">
+                                    <img src="images/services/ui-ux-design/web-design.svg" alt="Web Design">
                                 </div>
-                                <p class="services-box-title">Biomes</p>
+                                <p class="services-box-title">Web Design</p>
 							</a>
 						</li>
                         <li class="mt-3 nav-item">
-							<a data-bs-toggle="tab" href="#urban" class="service-box-inner zoomed nav-link">
+							<a data-bs-toggle="tab" href="#ar" class="service-box-inner zoomed nav-link">
                                 <div class="service-box-icon">
-                                    <img src="images/services/environment-design/urban-environment.svg" alt="Urban Environment">
+                                    <img src="images/services/ui-ux-design/ar-vr-app-design.svg" alt="AR/VR App Design">
                                 </div>
-                                <p class="services-box-title">Urban Environment</p>
+                                <p class="services-box-title">AR/VR App Design</p>
 							</a>
 						</li>
 					</ul>
 				</div>
 				<div class="col-md-7 my-auto wow fadeInRight">
 					<div class="tab-content tab-body">
-						<div id="game" class="tab-pane fade in active game">
+						<div id="wireframing" class="tab-pane fade in active wireframing">
 							<div class="text-left">
-								<h3 class="font-size-24 mt-0">Game Environment</h3>
-								<p class="mt-4">Just as round characters deserve to be painted on a perfect canvas, so too a successful game must have a flawless background. We let your ideas shine against beautiful environments.</p>
+								<h3 class="font-size-24 mt-0">Wireframing and Prototyping</h3>
+								<p class="mt-4">We will help you validate any ideas and visualize each aspect of your future platform. Once you receive your wireframe and/or prototype, we can surely discuss its further elaboration.</p>
 							</div>
 						</div>
-						<div id="maps" class="tab-pane fade maps">
+						<div id="mobile" class="tab-pane fade mobile">
 							<div class="text-left">
-								<h3 class="font-size-24 mt-0">Maps & Levels</h3>
-								<p class="mt-4">Having worked on dozens of game projects, we understand how game levels, maps, and areas function to create art accordingly with proper visual cues for players.</p>
+								<h3 class="font-size-24 mt-0">Mobile App UI/UX Design</h3>
+								<p class="mt-4">Our mobile UI/UX design company will help you take advantage of key gestures and functionality of many device types while remaining intuitive and consistent across different models.</p>
 							</div>
 						</div>
-						<div id="biomes" class="tab-pane fade biomes">
+						<div id="web" class="tab-pane fade web">
 							<div class="text-left">
-								<h3 class="font-size-24 mt-0">Biomes</h3>
-								<p class="mt-4">Recreating lush natural landscapes with different features and terrains is where our approach to making art acquires a new life.</p>
+								<h3 class="font-size-24 mt-0">Web Design</h3>
+								<p class="mt-4">With our web design ideas implemented, your users will have an easy time finding what they need and enjoy the unique features your business has to offer.</p>
 							</div>
 						</div>
-						<div id="urban" class="tab-pane fade urban">
+						<div id="ar" class="tab-pane fade ar">
 							<div class="text-left">
-								<h3 class="font-size-24 mt-0">Urban Environment</h3>
-								<p class="mt-4">City landscapes and areas of our artists’ authorship are filled to the brim with detail, color, and texture, catching the glance of even hypercritical viewers.</p>
+								<h3 class="font-size-24 mt-0">AR/VR App Design</h3>
+								<p class="mt-4">Armed with expertise and knowledge in building immersive apps, our specialists can make the most out of technologies in their possession to ensure a unique user experience for your product.</p>
 							</div>
 						</div>
 					</div>
@@ -519,8 +519,8 @@
 			<div class="row wow fadeInLeft">
 				<div class="col-lg-12">
 					<div class="common-heading text-l">
-						<h2 class="common-heading text-center">Our Environment Creation Pipeline</h2>
-						<p class="text-center">Every customer in our  character design studio works directly with us to ensure that the design process is as simple and straightforward as feasible. Continuous communication puts both parties on the same page, allowing us to meet all of your requirements.</p>
+						<h2 class="common-heading text-center">Our UI/UX Creation Pipeline</h2>
+						<p class="text-center">Our UI/UX company has a time-tested and fine-tuned pipeline for all projects related to 2D design. Prioritizing transparency, we keep our clients updated at each stage, devoting considerable time to reviewing completed work before proceeding to the next step.</p>
 					</div>
 				</div>
             </div>
@@ -567,7 +567,7 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center wow fadeInDown">
 					<span class="text-white">Benefits</span>
-					<h2 class="text-white mb10">See How Environment Design Benefits You</h2>
+					<h2 class="text-white mb10">See How UI/UX Design Benefits You</h2>
 					<p class="text-white">Our team of professional character designers will work with you throughout the entire project, advancing your business idea to the next level and simply increasing the end product's value.</p>
 				</div>
 			</div>
@@ -653,7 +653,7 @@
 			<div class="row justify-content-center wow fadeInLeft">
 				<div class="col-12">
 					<div class="common-heading">
-						<h2 class="text-center">Environment Design Portfolio</h2>
+						<h2 class="text-center">UI/UX Design Portfolio</h2>
 						<p class="pt-2 text-center"> Exterior renderings are a necessary component of today's project visualization. Exterior rendering services are mostly used to visually present a design concept. This will make customer collaboration easier and allow you to learn more about their preferences. Using CGI, 3D exterior visualization enables for the creation of volumetric pictures of any object. This method is excellent for increasing creativity, experimenting, and imagination.</p>
 					</div>
 				</div>
