--- a/concept-art.html
+++ b/concept-art.html
@@ -416,13 +416,13 @@
 	<!-- End Header -->
 
     <!-- Start Breadcrumb Area -->
-    <section class="breadcrumb-areav2 environment-design-banner d-flex align-items-center">
+    <section class="breadcrumb-areav2 concept-art-banner d-flex align-items-center">
 		<div class="container">
 			<div class="row">
                 <div class="col-12 v-center">
                     <div class="hero-heading-sec2 niwax" style="transform: translate3d(0px, 20px, 0px);">
-                        <h3 class="wow fadeIn text-white" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Environment Design Service</h3>
-                        <p class="wow fadeIn m0 pt-3" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">We fit your ideas into unforgettable environments and landscapes</p>
+                        <h3 class="wow fadeIn text-white" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">Concept Art Service</h3>
+                        <p class="wow fadeIn m0 pt-3" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeIn;">Vitalize your inspiration with our 2D concept art powers</p>
                         <a href="contact-us.html" class="niwax-btn2 wow fadeIn mt-4" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">Contact Us <i class="fas fa-chevron-right fa-ani" aria-hidden="true"></i></a>
                         <a href="#portfolio" class="niwax-btn2 wow fadeIn mt-4 ms-3" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">Portfolio <i class="fas fa-chevron-right fa-ani" aria-hidden="true"></i></a>
                     </div>
@@ -438,8 +438,8 @@
 			<div class="row">
 				<div class="col-lg-12 wow fadeInDown">
 					<div class="common-heading text-l">
-						<h2 class="common-heading">Environment Design Service We Provide</h2>
-						<p class="text-center">We have a great passion for creating vibrant and unique digital worlds. Our environment art agency expertly manages this branch of design for games, animation, and various other media forms. Our artworks will become a perfect fit for any story you are trying to tell and leave a lasting impression.</p>
+						<h2 class="common-heading">Concept Art Service We Provide</h2>
+						<p class="text-center">3D-Ace is rich in experienced artists who master skills to provide you with any form of art you may ever need. We can frame your ideas into pixelated 2D worlds or hyper-realistic settings — the choice is yours. And it is almost limitless.</p>
 					</div>
 				</div>
             </div>
@@ -447,63 +447,63 @@
 				<div class="col-md-5 wow fadeInLeft">
 					<ul class="nav nav-tabs mt-3">
 						<li class="me-2 nav-item">
-							<a data-bs-toggle="tab" href="#game" class="service-box-inner zoomed active nav-link">
+							<a data-bs-toggle="tab" href="#character" class="service-box-inner zoomed active nav-link">
                                 <div class="service-box-icon">
-                                    <img src="images/services/environment-design/game-environment.svg" alt="Game Environment">
+                                    <img src="images/services/concept-art/character-concept-art.svg" alt="Character Concept Art">
                                 </div>
-                                <p class="services-box-title">Game Environment</p>
+                                <p class="services-box-title">Character Concept Art</p>
 							</a>
 						</li>
 						<li class="nav-item">
-							<a data-bs-toggle="tab" href="#maps" class="service-box-inner zoomed nav-link">
+							<a data-bs-toggle="tab" href="#environment" class="service-box-inner zoomed nav-link">
                                 <div class="service-box-icon">
-                                    <img src="images/services/environment-design/maps-levels-environment.svg" alt="Maps & Level Environment">
+                                    <img src="images/services/concept-art/environment-concept-art.svg" alt="Environment Concept Art">
                                 </div>
-                                <p class="services-box-title">Maps & Levels</p>
+                                <p class="services-box-title">Environment Concept Art</p>
 							</a>
 						</li>
 						<li class="mt-3 me-2 nav-item">
-							<a data-bs-toggle="tab" href="#biomes" class="service-box-inner zoomed nav-link">
+							<a data-bs-toggle="tab" href="#level" class="service-box-inner zoomed nav-link">
                                 <div class="service-box-icon">
-                                    <img src="images/services/environment-design/biomes-environment.svg" alt="Biomes Environment">
+                                    <img src="images/services/concept-art/level-design-concept-art.svg" alt="Level Design Concept">
                                 </div>
-                                <p class="services-box-title">Biomes</p>
+                                <p class="services-box-title">Level Design Concept</p>
 							</a>
 						</li>
                         <li class="mt-3 nav-item">
-							<a data-bs-toggle="tab" href="#urban" class="service-box-inner zoomed nav-link">
+							<a data-bs-toggle="tab" href="#weapon" class="service-box-inner zoomed nav-link">
                                 <div class="service-box-icon">
-                                    <img src="images/services/environment-design/urban-environment.svg" alt="Urban Environment">
+                                    <img src="images/services/concept-art/weapons-concept-art.svg" alt="Concepts of Vehicles, Weapons & Props">
                                 </div>
-                                <p class="services-box-title">Urban Environment</p>
+                                <p class="services-box-title">Concepts of Vehicles, Weapons & Props</p>
 							</a>
 						</li>
 					</ul>
 				</div>
 				<div class="col-md-7 my-auto wow fadeInRight">
 					<div class="tab-content tab-body">
-						<div id="game" class="tab-pane fade in active game">
+						<div id="character" class="tab-pane fade in active character">
 							<div class="text-left">
-								<h3 class="font-size-24 mt-0">Game Environment</h3>
-								<p class="mt-4">Just as round characters deserve to be painted on a perfect canvas, so too a successful game must have a flawless background. We let your ideas shine against beautiful environments.</p>
+								<h3 class="font-size-24 mt-0">Character Concept Art</h3>
+								<p class="mt-4">Each character that slides off our brushes is packed with unique features and traits. Whether they resemble unearthly creatures, real humans, or animals, our 2D concepts will equally kindle your product with zest.</p>
 							</div>
 						</div>
-						<div id="maps" class="tab-pane fade maps">
+						<div id="environment" class="tab-pane fade environment">
 							<div class="text-left">
-								<h3 class="font-size-24 mt-0">Maps & Levels</h3>
-								<p class="mt-4">Having worked on dozens of game projects, we understand how game levels, maps, and areas function to create art accordingly with proper visual cues for players.</p>
+								<h3 class="font-size-24 mt-0">Environment Concept Art</h3>
+								<p class="mt-4">We can design locations, terrains, and environments for you, fleshing out their details as well as giving them form before they can be fully brought to life.</p>
 							</div>
 						</div>
-						<div id="biomes" class="tab-pane fade biomes">
+						<div id="level" class="tab-pane fade level">
 							<div class="text-left">
-								<h3 class="font-size-24 mt-0">Biomes</h3>
-								<p class="mt-4">Recreating lush natural landscapes with different features and terrains is where our approach to making art acquires a new life.</p>
+								<h3 class="font-size-24 mt-0">Level Design Concept</h3>
+								<p class="mt-4">With profound experience and hundreds of commercially successful projects behind our back, we can build level design concepts of any complexity to make your product stand out.</p>
 							</div>
 						</div>
-						<div id="urban" class="tab-pane fade urban">
+						<div id="weapon" class="tab-pane fade weapon">
 							<div class="text-left">
-								<h3 class="font-size-24 mt-0">Urban Environment</h3>
-								<p class="mt-4">City landscapes and areas of our artists’ authorship are filled to the brim with detail, color, and texture, catching the glance of even hypercritical viewers.</p>
+								<h3 class="font-size-24 mt-0">Concepts of Vehicles, Weapons & Props</h3>
+								<p class="mt-4">For your game to overshadow competitors, quality props, vehicles, and weapons are a must. Details make digital worlds come to life. Our in-house artists have what it takes to provide you with the elaborate concept art of any 2D object.</p>
 							</div>
 						</div>
 					</div>
@@ -519,8 +519,8 @@
 			<div class="row wow fadeInLeft">
 				<div class="col-lg-12">
 					<div class="common-heading text-l">
-						<h2 class="common-heading text-center">Our Environment Creation Pipeline</h2>
-						<p class="text-center">Every customer in our  character design studio works directly with us to ensure that the design process is as simple and straightforward as feasible. Continuous communication puts both parties on the same page, allowing us to meet all of your requirements.</p>
+						<h2 class="common-heading text-center">Our Concept Art Creation Pipeline</h2>
+						<p class="text-center">Every customer in our character design studio works directly with us to ensure that the design process is as simple and straightforward as feasible. Continuous communication puts both parties on the same page, allowing us to meet all of your requirements.</p>
 					</div>
 				</div>
             </div>
@@ -567,7 +567,7 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center wow fadeInDown">
 					<span class="text-white">Benefits</span>
-					<h2 class="text-white mb10">See How Environment Design Benefits You</h2>
+					<h2 class="text-white mb10">See How Concept Art Benefits You</h2>
 					<p class="text-white">Our team of professional character designers will work with you throughout the entire project, advancing your business idea to the next level and simply increasing the end product's value.</p>
 				</div>
 			</div>
@@ -653,7 +653,7 @@
 			<div class="row justify-content-center wow fadeInLeft">
 				<div class="col-12">
 					<div class="common-heading">
-						<h2 class="text-center">Environment Design Portfolio</h2>
+						<h2 class="text-center">Concept Art Portfolio</h2>
 						<p class="pt-2 text-center"> Exterior renderings are a necessary component of today's project visualization. Exterior rendering services are mostly used to visually present a design concept. This will make customer collaboration easier and allow you to learn more about their preferences. Using CGI, 3D exterior visualization enables for the creation of volumetric pictures of any object. This method is excellent for increasing creativity, experimenting, and imagination.</p>
 					</div>
 				</div>
