--- a/game-development.html
+++ b/game-development.html
@@ -656,7 +656,7 @@
 							<a class="nav-link active" data-bs-toggle="tab" href="#twod">
 								<div class="card">
 									<div class="card-body">
-										<h5 class="mb-0 service-name text-white">2d Art</h5>
+										<h5 class="mb-0 service-name text-white">2D/3D Art</h5>
 										<img src="images/services/game-development/2d-art-icon.webp" class="service-icon">
 									</div>
 								</div>
@@ -673,10 +673,10 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" data-bs-toggle="tab" href="#threed">
+							<a class="nav-link" data-bs-toggle="tab" href="#ui">
 								<div class="card">
 									<div class="card-body">
-										<h5 class="mb-0 service-name text-white">3d Art</h5>
+										<h5 class="mb-0 service-name text-white">UI/UX</h5>
 										<img src="images/services/game-development/3d-art-icon.webp" class="service-icon">
 									</div>
 								</div>
@@ -704,8 +704,9 @@
 							<img src="images/services/game-development/environment-design.webp" class="img-fluid service-images">
 							<p class="view-more-button"><a href="environment-design.html">View More</a></p>
 						</div>
-						<div id="threed" class="container tab-pane fade"><br>
+						<div id="ui" class="container tab-pane fade"><br>
 							<img src="images/services/game-development/3d-art.webp" class="img-fluid service-images">
+							<p class="view-more-button"><a href="ui-ux-design.html">View More</a></p>
 						</div>
 						<div id="character" class="container tab-pane fade"><br>
 							<img src="images/services/game-development/character-design.webp" class="img-fluid service-images">
@@ -719,6 +720,7 @@
 						</div>
 						<div id="concept" class="container tab-pane fade"><br>
 							<img src="images/services/game-development/conceprt-art.webp" class="img-fluid service-images">
+							<p class="view-more-button"><a href="concept-art.html">View More</a></p>
 						</div>
 						<div id="gamedev" class="container tab-pane fade"><br>
 							<img src="images/services/game-development/game-development.webp" class="img-fluid service-images">
